add styling to website

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script type="text/javascript" src="./assets/javascript/index.js"></script>
 </body>
 </html>
